fix: :bug: container height on mobile

--- a/client/src/app/components/home/home.component.scss
+++ b/client/src/app/components/home/home.component.scss
@@ -20,6 +20,7 @@ mat-sidenav-container, mat-sidenav-content  {
 .option {
   font-size: 16px;
   padding-right: 20px;
+  font-weight: normal;
   mat-icon {
     margin-left: 5px;
   }
